--- a/თბილისის_სახელმწიფო_სამედიცინო_უნივერსიტეტი.mw
+++ b/თბილისის_სახელმწიფო_სამედიცინო_უნივერსიტეტი.mw
@@ -5,9 +5,9 @@
 
 ==ისტორია==
 [[სურათი:univer_old.jpg|thumb|250px|ქართველ ექიმთა და ბუნებისმეტყველთა საზოგადოება]]
-[[1918]] წლის [[27 თებერვალი|27 თებერვალს]] უნივერსიტეტის პროფესორთა საბჭომ დაადასტურა სამკურნალო ფაკულტეტის შექმნის აუცილებლობა.  17 ივნისს იმავე საბჭომ "[[ქართველ ექიმთა და ბუნებისმეტყველთა საზოგადოების]]” თავმჯდომარის [[ვირსალაძე, სპირიდონ|სპირიდონ ვირსალაძის]] ხელმძღვანელობით, მიიღო გადაწყვეტილება, რათა სექტემბრის თვეში გახსნილიყო საბუნებისმეტყველო-სამკურნალო და მათემატიკური ფაკულტეტი. [[1919]] წლის [[9 აპრილი]] უნივერსიტეტის საბჭოს გადაწყვეტილებით, მანამდე ერთად არსებული საბუნებისმეტყველო-სამკურნალო და მათემატიკური ფაკულტეტი ცალკე ფაკულტეტებად გაიყო.
+[[1918]] წლის [[27 თებერვალი|27 თებერვალს]] უნივერსიტეტის პროფესორთა საბჭომ დაადასტურა სამკურნალო ფაკულტეტის შექმნის აუცილებლობა.  17 ივნისს იმავე საბჭომ "[[ქართველ ექიმთა და ბუნებისმეტყველთა საზოგადოების]]” თავმჯდომარის [[ვირსალაძე, სპირიდონ|სპირიდონ ვირსალაძის]] ხელმძღვანელობით, მიიღო გადაწყვეტილება, რათა სექტემბრის თვეში გახსნილიყო საბუნებისმეტყველო-სამკურნალო და მათემატიკური ფაკულტეტი. [[1919]] წლის [[9 აპრილი|9 აპრილს]] უნივერსიტეტის საბჭოს გადაწყვეტილებით, მანამდე ერთად არსებული საბუნებისმეტყველო-სამკურნალო და მათემატიკური ფაკულტეტი ცალკე ფაკულტეტებად გაიყო.
 
-წლების მანძილზე პროფესორ-მასწავლებელთა რაოდენობის ზრდისა  და მათი პროფესიონალიზმის საფუძველზე, შესაძლებელი გახდა სამკურნალო ფაკულტეტის გარდაქმნა დამოუკიდებელ ერთეულად და მისი ჩამოყალიბება  ინსტიტუტად. [[1930]] წლის [[10 ივნისს]] განხორციელდა თბილისის უნივერსიტეტის რეორგანიზება და გაიხსნა ''საქართველოს სახელმწიფო სამედიცინო ინსტიტუტი''. 1992 წელს კი საქართველოს რესპუბლიკის მთავრობის გადაწყვეტილებით, ავტონომიური უნივერსიტეტის სტატუსი მიიღო და ჩამოყალიბდა თბილისის სახელმწიფო სამედიცინო უნივერსიტეტად.
+წლების მანძილზე პროფესორ-მასწავლებელთა რაოდენობის ზრდისა  და მათი პროფესიონალიზმის საფუძველზე, შესაძლებელი გახდა სამკურნალო ფაკულტეტის გარდაქმნა დამოუკიდებელ ერთეულად და მისი ჩამოყალიბება  ინსტიტუტად. [[1930]] წლის [[10 ივნისი|10 ივნისს]] განხორციელდა თბილისის უნივერსიტეტის რეორგანიზება და გაიხსნა ''საქართველოს სახელმწიფო სამედიცინო ინსტიტუტი''. 1992 წელს კი საქართველოს რესპუბლიკის მთავრობის გადაწყვეტილებით, ავტონომიური უნივერსიტეტის სტატუსი მიიღო და ჩამოყალიბდა თბილისის სახელმწიფო სამედიცინო უნივერსიტეტად.
 
 ==ორგანიზაცია==
 დღეისათვის, [[თსსუ]]-ში შემდეგი ფაკულტეტებია: [[სამკურნალო]] ([[ქართული]], [[რუსული]], [[ინგლისური]] სექტორები) [[პედიატრიული]], საზოგადოებრივი ჯანდაცვისა და მენეჯმენტის, [[სტომატოლოგიური]], [[ფარმაცევტული]], ფსიქოთერაპიისა და ფსიქოსომატური მედიცინის, უცხო ენების ([[ინგლისური]], [[გერმანული]], [[ფრანგული]] [[ენები]]).
