--- a/თბილისის_სახელმწიფო_სამედიცინო_უნივერსიტეტი.mw
+++ b/თბილისის_სახელმწიფო_სამედიცინო_უნივერსიტეტი.mw
@@ -74,7 +74,7 @@
 ==რესურსები ინტერნეტში==
 [http://www.tsmu.edu/index.php თბილისის სახელმწიფო სამედიცინო უნივერსიტეტი]
 
-[[კატეგორია:საქართველოს უნივერსიტეტები]]
+[[კატეგორია:საქართველოს უმაღლესი სასწავლებლები]]
 [[კატეგორია:განათლება]]
 
 
