*Empty MediaWiki Message*

--- a/ეხვევის_ღვთისმშობლის_ეკლესია.mw
+++ b/ეხვევის_ღვთისმშობლის_ეკლესია.mw
@@ -3,7 +3,7 @@
 
 ჩუქურთმები მაღალ პროფესიულ დონეზეა შესრულებული. თავდაპირველად ეკლესიას ეგვტერები ჰქონია, რომლებიც XX საუკუნის დასაწყისში შენობის შეკეთებისას ძველი სენაკების ნაშთებთან ერთად დაუნგრევიათ.
 
-საქართველოს ძეგლთა დაცვის ფონდის დაფინანსებით (ქართველი მეცენატი ბ. ივანიშვილი) იწყება ქართული ძეგლის ეხვევის (X-XI საუკუნეთა მიჯნა) რესტავრაცია (არქიტექტორ-რესტავრატორი თ. ნემსაძე). 
+საქართველოს ძეგლთა დაცვის ფონდის დაფინანსებით (ქართველი მეცენატი [[ივანიშვილი, ბიძინა|ბ. ივანიშვილი]]) იწყება ქართული ძეგლის ეხვევის (X-XI საუკუნეთა მიჯნა) რესტავრაცია (არქიტექტორ-რესტავრატორი თ. ნემსაძე). 
 
 
 
