*Empty MediaWiki Message*

--- a/მიშელ_პლატინი.mw
+++ b/მიშელ_პლატინი.mw
@@ -3,12 +3,13 @@
 
 
 ==ბიოგრაფია==
-
+მარადონას მერე  პლატინი ყოველთვის იყო 80-იანი წლების ერთ-ერთი საუკეთესო ფეხბურთელი.
+მისი პირველი კლუბი იყო (ნანსი). ნანსიში კარგი თამაშის შემდეგ შეამჩნია იტალიურმა კლუბმა
+იუვენტუსმა.
 
 [[კატეგორია:ფრანგები]]
 [[კატეგორია:ფეხბურთელები]]
 [[კატეგორია:დაბადებული 1955]]
-
 [[ar:ميشيل بلاتيني]]
 [[bg:Мишел Платини]]
 [[de:Michel Platini]]
