*Empty MediaWiki Message*

--- a/მიშელ_პლატინი.mw
+++ b/მიშელ_პლატინი.mw
@@ -6,6 +6,9 @@
 მარადონას მერე  პლატინი ყოველთვის იყო 80-იანი წლების ერთ-ერთი საუკეთესო ფეხბურთელი.
 მისი პირველი კლუბი იყო (ნანსი). ნანსიში კარგი თამაშის შემდეგ შეამჩნია იტალიურმა კლუბმა
 იუვენტუსმა.
+პლატინმა თავი გამოიჩინა  თავისი ტეკნიკითა და ჯარიმის შესრულებით.
+ის იყო საფრანგეთის ეროვნული ნაკრების კაპიტანი. მისი დამსახურება ის რომ საფრანგეთი გახდა ევროპის 
+ჩემპიონი 1984 წელს.
 
 [[კატეგორია:ფრანგები]]
 [[კატეგორია:ფეხბურთელები]]
