/* ლიტერატურული და საზოგადოებრივი მოღვაწეობა */

--- a/ილია_ჭავჭავაძე.mw
+++ b/ილია_ჭავჭავაძე.mw
@@ -28,9 +28,9 @@
 
 ილია ჭავჭავაძე იყო არა მარტო მხატვრული სიტყვის დიდოსტატი-პოეტი, ბელეტრისტი, დრამატურგი, მთარგმნელი; არა მარტო სალიტერატურო ენის რეფორმატორი და კანონმდებელი, ქართული კრიტიკული რეალიზმის, რეალისტური კრიტიკისა და მებრძოლი პუბლიცისტიკის ფუძემდებელი, არამედ ასევე - დიდი მასშტაბისა და ფართო დიაპაზონის მკვლევარი, რომლის ინტერესები მეცნიერების არაერთ დარგს მოიცავდა; მისი პრაქტიკული მოღვაწეობა კი საქართველოს საზოგადოებრივ-კულტურული ცხოვრების ყველა მნიშვნელოვან უბანს სწვდებოდა და მათ წარმატებებში განსაზღვრულ როლს ასრულებდა.
 
-მთელი თავისი ნახევარსაუკუნოვანი მოღვაწეობით ჭავჭავაძე დიადი მიზნის განხორციელებას - ქართველი ხალხის კონსოლიდაციას, ეროვნული თვითშეგნების გამოცოცხლებასა და ამაღლებას, ეროვნულ-სახელმწიფოებრივი დამოუკიდებლობისათვის ბრძოლას ემსახურებოდა. ჭავჭავაძე იყო XIX საუკუნის II ნახევრის საქართველოს უდიდესი ეროვნული მოღვაწე, ქართველი ერის ეროვნულ-განმათავისუფლებელი და განმანათლებელი მოძრაობის სულისჩამდგმელი და წინამძღოლი. უწინარეს ყოვლისა, ამაშია მისი ეპოქლური დამსახურება საქართველოს წინაშე.
+მთელი თავისი ნახევარსაუკუნოვანი მოღვაწეობით ჭავჭავაძე დიადი მიზნის განხორციელებას - ქართველი ხალხის კონსოლიდაციას, ეროვნული თვითშეგნების გამოცოცხლებასა და ამაღლებას, ეროვნულ-სახელმწიფოებრივი დამოუკიდებლობისათვის ბრძოლას ემსახურებოდა. ჭავჭავაძე იყო XIX საუკუნის II ნახევრის საქართველოს უდიდესი ეროვნული მოღვაწე, ქართველი ერის ეროვნულ-განმათავისუფლებელი და განმანათლებელი მოძრაობის სულისჩამდგმელი და წინამძღოლი. უწინარეს ყოვლისა, ამაშია მისი ეპოქალური დამსახურება საქართველოს წინაშე.
 
-მოწინავე ეროვნულმა იდეებმა, ერის გადარჩენის გზების ძიებამ ჭავჭავაძისა და მის თანამოაზრეთა შემოქმედებაში შეიძინა მწობრი და თანამიმდევრული კონცეფციის სახე, რომელიც მთელი ერის ქმედებისა და ბრძოლის ნათლად გააზრებულ პროგრამად იქცა და რომლის საბოლოო მიზანს ეროვნული ჩაგვრისგან  თავისუფალი და სოციალურად თანასწორი საზოგადოების აშენება წარმოადგენდა. ჭავჭავაძე მეწინავე იყო მათ შორის, ვინც ქართულ სინამდვილეში ასეთი საზოგადოების აშენებისა და მშობელი ქვეყნის ბედნიერი მომავლის რწმენა დანერგა.
+მოწინავე ეროვნულმა იდეებმა, ერის გადარჩენის გზების ძიებამ ჭავჭავაძისა და მის თანამოაზრეთა შემოქმედებაში შეიძინა მწყობრი და თანამიმდევრული კონცეფციის სახე, რომელიც მთელი ერის ქმედებისა და ბრძოლის ნათლად გააზრებულ პროგრამად იქცა და რომლის საბოლოო მიზანს ეროვნული ჩაგვრისგან  თავისუფალი და სოციალურად თანასწორი საზოგადოების აშენება წარმოადგენდა. ჭავჭავაძე მეწინავე იყო მათ შორის, ვინც ქართულ სინამდვილეში ასეთი საზოგადოების აშენებისა და მშობელი ქვეყნის ბედნიერი მომავლის რწმენა დანერგა.
 
 [[1905]] წელს ილიამ შეადგინა პროგრამა, რომლის საფუძველზე [[1917]] წელს დაარსდა '''საქართველოს ეროვნულ-დემოკრატიული პარტია'''. ამ ორგანიზაციის დაფუძნების სულისჩამდგმელი გახლდათ ილია ჭავჭავაძის დის შვილი, იმხანად ქართლ-კახეთის თავადაზნაურობის მარშალი, გენერალი [[აფხაზი, კონსტანტინე|კონსტანტინე (კოტე) აფხაზი]]. 
 
