*Empty MediaWiki Message*

--- a/ჭურთა.mw
+++ b/ჭურთა.mw
@@ -2,7 +2,7 @@
 
 სახელწოდება "ჭურთა" სავარაუდოდ წარმოსდგება ქართული სიტყვისაგან "ჭური". აღსანიშნავია, რომ  ქართულ ისტორიულ წყაროებში დაცული ცნობების თანახმად, ქსნის ერისთავები ბარიდან ატანილი [[ყურძენი|ყურძნით]] [[ღვინო|ღვინოს]] [[ჭური|ჭურებში]] ამზადებდნენ. ამგვარი [[მარანი|მარნები]] ჭურებითურთ მოწყობილი იყო ლარგვისის მონასტერში და ჭურთის ხეობაში რამდენიმე ადგილას. ასევე აღმოჩენილია ყურძნის წიპწებიც.
 
-ქმნის ჭურთა ულამაზესი ხეობაა. [[ჭურთის ხეობა|ჭურთის ხეობაში]] განლაგებულია [[ახალგორის რაიონი|ახალგორის რაიონის]] შემადგენლობაში შემავალი შემდეგი სოფლები: [[ლარგვისი]] (ნაწილობრივ), [[მოჭალიეთი]], [[გავაზი]], [[დორეთკარი]]. ჭურთისა და ქსნის შესართავთან მდებარეობდა სოფელი [[საქორეთი]], რომელიც ამჟამად დაცარიელებულია. ჭურთის ხეობაში ძირითადად ორი გვარი მოსახლეობს: [[ილურიძეები]] და [[შერმადინები]]. ჭურთის ხეობაში გვხვდება მინერალური სამკურნალო წყლები. ჭურთისა და ქსნის შესართავთან განლაგებულია ლარგვისის სამონასტრო კომპლექსი: ეკლესია, ციხე-გალავანი ერთი დიდი და რამდენიმე მცირე კოშკით, ასევე სხვადასხვა სამონასტრო ნაგებობები.
+ჭურთა ულამაზესი ხეობაა. [[ჭურთის ხეობა|ჭურთის ხეობაში]] განლაგებულია [[ახალგორის რაიონი|ახალგორის რაიონის]] შემადგენლობაში შემავალი შემდეგი სოფლები: [[ლარგვისი]] (ნაწილობრივ), [[მოჭალიეთი]], [[გავაზი]], [[დორეთკარი]]. ჭურთისა და ქსნის შესართავთან მდებარეობდა სოფელი [[საქორეთი]], რომელიც ამჟამად დაცარიელებულია. ჭურთის ხეობაში ძირითადად ორი გვარი მოსახლეობს: [[ილურიძეები]] და [[შერმადინები]]. ჭურთის ხეობაში გვხვდება მინერალური სამკურნალო წყლები. ჭურთისა და ქსნის შესართავთან განლაგებულია ლარგვისის სამონასტრო კომპლექსი: ეკლესია, ციხე-გალავანი ერთი დიდი და რამდენიმე მცირე კოშკით, ასევე სხვადასხვა სამონასტრო ნაგებობები.
 
 
 [[კატეგორია:საქართველოს მდინარეები]]
