*Empty MediaWiki Message*

--- a/მიშელ_პლატინი.mw
+++ b/მიშელ_პლატინი.mw
@@ -1,14 +1,10 @@
 [[სურათი:MichelPlatini-1.jpg|thumb|180px|მიშელ პლატინი]]
-'''პლატინი, მიშელ''' ''([[ფრანგული ენა|ფრანგ.]] Michel Platini)'' (* [[21 ივნისი]] [[1955]], ჟოფი ([[ნანსი]]), [[საფრანგეთი]]) - ფრანგული ფეხბურთის ლეგენდა, მსოფლიოს ყველა დროის ერთ-ერთი საუკეთესო ნახევარმცველი.
+'''პლატინი, მიშელ''' ''([[ფრანგული ენა|ფრანგ.]] Michel Platini)'' (* [[21 ივნისი]] [[1955]], ჟოფი ([[ნანსი]]), [[საფრანგეთი]]) -- ფრანგული ფეხბურთის ლეგენდა, მსოფლიოს ყველა დროის ერთ-ერთი საუკეთესო ნახევარმცველი.
 
 
 ==ბიოგრაფია==
-მარადონას მერე  პლატინი ყოველთვის იყო 80-იანი წლების ერთ-ერთი საუკეთესო ფეხბურთელი.
-მისი პირველი კლუბი იყო (ნანსი). ნანსიში კარგი თამაშის შემდეგ შეამჩნია იტალიურმა კლუბმა
-იუვენტუსმა.
-პლატინმა თავი გამოიჩინა  თავისი ტეკნიკითა და ჯარიმის შესრულებით.
-ის იყო საფრანგეთის ეროვნული ნაკრების კაპიტანი. მისი დამსახურება ის რომ საფრანგეთი გახდა ევროპის 
-ჩემპიონი 1984 წელს.
+[[მარადონა|მარადონას]] შემდეგ პლატინი ყოველთვის ითვლებოდა 80-იანი წლების ერთ-ერთი საუკეთესო ფეხბურთელად. მისი პირველი კლუბი იყო [[ნანსი]]. ნანსიში კარგი თამაშის შემდეგ შეამჩნია იტალიურმა კლუბმა
+[[იუვენტუსი|იუვენტუსმა]]. პლატინმა თავი გამოიჩინა  თავისი ტექნიკითა და ჯარიმის შესრულებით. ის იყო [[საფრანგეთის ეროვნული საფეხბურთო ნაკრები|საფრანგეთის ეროვნული ნაკრების]] კაპიტანი. მისი დამსახურებით საფრანგეთი ევროპის ჩემპიონი გახდა [[1984]] წელს.
 
 [[კატეგორია:ფრანგები]]
 [[კატეგორია:ფეხბურთელები]]
