--- a/მიშელ_პლატინი.mw
+++ b/მიშელ_პლატინი.mw
@@ -3,7 +3,7 @@
 
 
 ==ბიოგრაფია==
-[[მარადონა|მარადონას]] შემდეგ პლატინი ყოველთვის ითვლებოდა 80-იანი წლების ერთ-ერთი საუკეთესო ფეხბურთელად. მისი პირველი კლუბი იყო [[ნანსი]]. ნანსიში კარგი თამაშის შემდეგ შეამჩნია იტალიურმა კლუბმა
+[[მარადონა|მარადონას]] შემდეგ პლატინი ყოველთვის ითვლებოდა 80-იანი წლების ერთ-ერთ საუკეთესო ფეხბურთელად. მისი პირველი კლუბი იყო [[ნანსი]]. ნანსიში კარგი თამაშის შემდეგ შეამჩნია იტალიურმა კლუბმა
 [[იუვენტუსი|იუვენტუსმა]]. პლატინმა თავი გამოიჩინა  თავისი ტექნიკითა და ჯარიმის შესრულებით. ის იყო [[საფრანგეთის ეროვნული საფეხბურთო ნაკრები|საფრანგეთის ეროვნული ნაკრების]] კაპიტანი. მისი დამსახურებით საფრანგეთი ევროპის ჩემპიონი გახდა [[1984]] წელს.
 
 [[კატეგორია:ფრანგები]]
