--- a/ვარძია.mw
+++ b/ვარძია.mw
@@ -1,7 +1,7 @@
-[[სურათი:Vardzia 03.jpg|thumb|ვარძია, კლდეში ნაკვეთი სამონასტრო ანსამბლი]]
-'''ვარძია''', კლდეში ნაკვეთი სამონასტრო ანსამბლი, XII-XIII საუკუნეების ქართული მხატვრული კულტურის ძეგლი. მდებარეობს ისტორიულ ჯავახეთში, ასპინძის რაიონში (ასპინძინდან 30 კმ). მდ. მტკვრის მარცხენა ნაპირზე.
+[[სურათი:Vardzia 03.jpg|thumb|250px|ვარძია, კლდეში ნაკვეთი სამონასტრო ანსამბლი]]
+'''ვარძია''', [[კლდე|კლდეში]] ნაკვეთი სამონასტრო ანსამბლი, XII-XIII საუკუნეების ქართული მხატვრული კულტურის ძეგლი. მდებარეობს ისტორიულ [[ჯავახეთი|ჯავახეთში]], [[ასპინძის რაიონი|ასპინძის რაიონშ]]ი ([[ასპინძა|ასპინძინდან]] 30 კმ). [[მტკვარი|მდ. მტკვრის]] მარცხენა ნაპირზე.
 
-სამონასტრო ანსამბლი შეიქმნა ძირითადად 1156-1203, აკურთხეს 1185 წლის 15 აგვისტოს [[თამარი|თამარის]] მეფობის ხანაში (1184-1213). სამეფო მონასტერი დიდ როლს თამაშობდა ქვეყნის პოლიტიკურ ცხოვრებაში. ვარძია იმთავითვე კულტურულ-საგანმანათლებლო კერა იყო. ერთხანს იქ მოღვაწეობდა [[იოანე შავთელი]], რომელმაც იქვე შეთხზა "გალობანი ვარძიისა ღვთისმშობლისანი". ვარძიის წიგნისაცავიდან შემორჩენილია ვარძიის ოთხთავის დასურათებული ხელნაწერი (XII ს.). ვარძიის მონასტრის წინამძღვრის სახელო ტრადიციულად საწოლის მწიგნობრობა იყო, იგი ეკლესია-მონასტრების საქმიანობას ხელმძღვანელობდა და ქვეყნის პოლიტიკურ ცხოვრებაში თვალსაჩინო როლს ასრულებდა. 
+სამონასტრო ანსამბლი შეიქმნა ძირითადად [[1156]]-[[1203]], აკურთხეს [[1185]] წლის [[15 აგვისტო|15 აგვისტოს]] [[თამარი|თამარის]] მეფობის ხანაში ([[1184]]-[[1213]]). სამეფო მონასტერი დიდ როლს თამაშობდა ქვეყნის პოლიტიკურ ცხოვრებაში. ვარძია იმთავითვე კულტურულ-საგანმანათლებლო კერა იყო. ერთხანს იქ მოღვაწეობდა [[იოანე შავთელი]], რომელმაც იქვე შეთხზა "გალობანი ვარძიისა ღვთისმშობლისანი". ვარძიის წიგნისაცავიდან შემორჩენილია ვარძიის ოთხთავის დასურათებული ხელნაწერი (XII ს.). ვარძიის მონასტრის წინამძღვრის სახელო ტრადიციულად საწოლის მწიგნობრობა იყო, იგი ეკლესია-მონასტრების საქმიანობას ხელმძღვანელობდა და ქვეყნის პოლიტიკურ ცხოვრებაში თვალსაჩინო როლს ასრულებდა. 
 
 მოლღოლთა ბატონობია ხანაში (XIII საუკუნის II ნახევარი) ვარძიელი ბერ-მონაზვნები აქტიურად იბრძოდნენ სარწმუნოებისა და ეროვნული კულტურის გადასარჩენად. 1551 ვარძიის მონასტერი სპარსთა ჯარმა დაარბია და დაანგრია. ვარძიის ცნობილი ღვთისმშობლის ხატი, ოქროსა და ფოლადის კარები და კულტურის სხვა მრავალი განძი მტერმა გაიტაცა. 1578, როდესაც ეს მხარე ოსმალეთმა დაიპყრო, ვარძია საბოლოოდ გაუკაცრიელდა. რუსეთ-ოსმალეთის 1828-1829 ომის შედეგად ვარძია კვლავ საქართველოს შემადგენლობაშია.
 
