*Empty MediaWiki Message*

--- a/15_აგვისტო.mw
+++ b/15_აგვისტო.mw
@@ -3,7 +3,7 @@
 
 == დღის მოვლენები ==
 
-
+* [[1185]] : აკურთხეს სამონასტრო ანსამბლი  [[ვარძია]]
 
 == ამ დღეს დაბადებულნი ==
 * [[1769]] : [[ბონაპარტი, ნაპოლეონ]]  - საფრანგეთის იმპერატორი
