*Empty MediaWiki Message*

--- a/ვარძია.mw
+++ b/ვარძია.mw
@@ -3,7 +3,7 @@
 
 სამონასტრო ანსამბლი შეიქმნა ძირითადად [[1156]]-[[1203]], აკურთხეს [[1185]] წლის [[15 აგვისტო|15 აგვისტოს]] [[თამარი|თამარის]] მეფობის ხანაში ([[1184]]-[[1213]]). სამეფო მონასტერი დიდ როლს თამაშობდა ქვეყნის პოლიტიკურ ცხოვრებაში. ვარძია იმთავითვე კულტურულ-საგანმანათლებლო კერა იყო. ერთხანს იქ მოღვაწეობდა [[იოანე შავთელი]], რომელმაც იქვე შეთხზა "გალობანი ვარძიისა ღვთისმშობლისანი". ვარძიის წიგნისაცავიდან შემორჩენილია ვარძიის ოთხთავის დასურათებული ხელნაწერი (XII ს.). ვარძიის მონასტრის წინამძღვრის სახელო ტრადიციულად საწოლის მწიგნობრობა იყო, იგი ეკლესია-მონასტრების საქმიანობას ხელმძღვანელობდა და ქვეყნის პოლიტიკურ ცხოვრებაში თვალსაჩინო როლს ასრულებდა. 
 
-მოლღოლთა ბატონობია ხანაში (XIII საუკუნის II ნახევარი) ვარძიელი ბერ-მონაზვნები აქტიურად იბრძოდნენ სარწმუნოებისა და ეროვნული კულტურის გადასარჩენად. 1551 ვარძიის მონასტერი სპარსთა ჯარმა დაარბია და დაანგრია. ვარძიის ცნობილი ღვთისმშობლის ხატი, ოქროსა და ფოლადის კარები და კულტურის სხვა მრავალი განძი მტერმა გაიტაცა. 1578, როდესაც ეს მხარე ოსმალეთმა დაიპყრო, ვარძია საბოლოოდ გაუკაცრიელდა. რუსეთ-ოსმალეთის 1828-1829 ომის შედეგად ვარძია კვლავ საქართველოს შემადგენლობაშია.
+მოლღოლთა ბატონობის ხანაში (XIII საუკუნის II ნახევარი) ვარძიელი ბერ-მონაზვნები აქტიურად იბრძოდნენ სარწმუნოებისა და ეროვნული კულტურის გადასარჩენად. 1551 ვარძიის მონასტერი სპარსთა ჯარმა დაარბია და დაანგრია. ვარძიის ცნობილი ღვთისმშობლის ხატი, ოქროსა და ფოლადის კარები და კულტურის სხვა მრავალი განძი მტერმა გაიტაცა. 1578, როდესაც ეს მხარე ოსმალეთმა დაიპყრო, ვარძია საბოლოოდ გაუკაცრიელდა. რუსეთ-ოსმალეთის 1828-1829 ომის შედეგად ვარძია კვლავ საქართველოს შემადგენლობაშია.
 
 საქართველოში საბჭოთა ხელისუფლების დამყარების შემდეგ დაიწყო ვარძიის მეცნიერული შესწავლა. 1938 იგი მუზეუმ-ნაკრძალად გამოცხადდა. 1970-1971 ვარძიაში ჩატარდა არქეოლოგიური გათხრები, მიკვლეულ იქნა 3 კულტურის ფენა:ადრინდელი შუა საუკუნეებისა, XII საუკუნისა და XIII-XIV საუკუნეები. აღმოჩნდა მოჭიქული კერამიკის მრავალფეროვანი ნიმუშები, ქაშანურის ფრაგმენტები, ლითონის სადნობი, სხვადასხვა ნივთი და იარაღი.
 
