*Empty MediaWiki Message*

--- a/ვარძია_(მრავალმნიშვნელოვანი).mw
+++ b/ვარძია_(მრავალმნიშვნელოვანი).mw
@@ -1,1 +1,11 @@
-#REDIRECT [[ვარძია (მონასტერი)]]
+საკუთარი სახელი '''ვარძია''' შეიძლება აღნიშნავდეს:
+
+
+
+
+* [[ვარძია (მონასტერი)|ვარძია]] - სამონასტრო ანსამბლი 
+
+* [[ვარძია (ხარაგაულის რაიონი)|ვარძია]] - სოფელი ხარაგაულის რაიონში
+
+
+{{მრავალმნიშვნელოვანი}}
