--- a/ილია_ჭავჭავაძე.mw
+++ b/ილია_ჭავჭავაძე.mw
@@ -1,17 +1,19 @@
-<div style="float:right">[[Image:IliaChavchavadze.jpg]]</div>
-
+[[Image:IliaChavchavadze.jpg|thumb|იალია ჭავჭავაძე]]
 '''ილია ჭავჭავაძე'''(* [[8 ნოემბერი]], [[1837]], სოფელი [[ყვარელი]] ― † [[12 სექტემბერი]], [[1907]], [[წიწამური]]), დიდი [[ქართველები | ქართველი]] მწერალი, პოლიტიკური და საზოგადო მოღვაწე, საქართველოს 1861-1907 წლების ეროვნულ-განმათავისუფლებელი მოძრაობის ლიდერი. 
 
-დაიბადა გადამდგარი ოფიცრის, თავად '''გრიგოლ ჭავჭავაძის''' ოჯახში. 10 წლისას გარდაეცვალა დედა - მარიამ ბებურიშვილი, 15 წლისას - მამა. დაობლებული ილიას და მისი და-ძმების მოვლა-პატრონობა იტვირთა მამიდამ - მაკრინე ჭავჭავაძე-ერისთავისამ.
+დაიბადა გადამდგარი ოფიცრის, თავად '''გრიგოლ ჭავჭავაძის''' ოჯახში. 10 წლისას გარდაეცვალა დედა - მარიამ ბებურიშვილი, 15 წლისას - მამა. დაობლებული ილიასa და მისი და-ძმების მოვლა-პატრონობა მამიდამ - მაკრინე ჭავჭავაძე-ერისთავისამ იტვირთა.
 
-===განათლება=== 
-
+==განათლება==
 [[1848]]-იდან ილია ჭავჭავაძე თბილისის კერძო პანსიონში სწავლობდა, [[1852]]-იდან - თბილისის პირველ კლასიკურ გიმნაზიაში, [[1857]]-[[1861]] - [[პეტერბურგი | პეტერბურგის]] [[უნივერსიტეტი | უნივერსიტეტის]] იურიდიულ ფაკულტეტზე.
 
-სტუდენტობის 4 წელი უაღრესად მნიშვნელოვანი აღმოჩნდა ჭავჭავაძის როგორც პიროვნებისა და მოქალაქის, მოაზროვნისა და მწერლის ფორმირებისა და სრულყოფისათვის, მისი პროგრესული სოციალური-პროგრესული, ფილოსოფიური და ესთეტიკური მრწამსის შემუშავებისათვის. იგი იმთავითვე ინტენსიურად და საფუძვლიანად სწავლობდა [[საქართველო | საქართველოს]] ისტორიასა და ქართულ მწერლობას. რუსულ და ევროპელ მწერალთა და მეცნიერთა მემკვიდრეობას; გატაცებით დაეწაფა [[რუსები | რუსი]] რევოლუციონერ დემოკრატების - [[ბელინსკი, ბესარიონ | ბელინსკის]], [[გერცენი, ალექსანდრე | გერცენის]], [[დობროლიუბოვი, ნიკოლოზ | დობროლიუბოვის]], [[ჩერნიშევსკი, ნიკოლოზ | ჩერნიშევსკის]] ნააზრევს, რაც დაუკავშირა საკუთარი ხალხის პროგრესისათვის ბრძოლის მიზნებსა და ამოცანებს. ამ წლებში დაიწერა ჭავჭავაძის ძლიერი მხატვრული ინდივიდუალობით აღბეჭდილი და მძაფრი მოქალაქეობრივი პათოსით გამსჭვალული, ფართო საზოგადოებრივი რეზონანსის მქონე ნაწარმოებები, რომელთაც აღმავალი ეტაპი შექმნეს XIX საუკუნის ქართულ ლიტერატურასა და საერთოდ ქართული მხატვრული  აზროვნების ისტორიაში: პოემა "აჩრდილი" (პირველი რედაქცია, 1859), რომელიც უმწვავეს ეროვნულ და სოციალურ პრობლემებზე ღრმა დაფიქრების ნაყოფია და ნათელი მერმისის რწმენითაა განმსჭვალული; ეროვნულ-განმათავისუფლებელი იდეებით შთაგონებული დრამატული პოემა "ქართვლის დედა. სცენა მომავალ ცხოვრებიდან" (პირველი რედაქცია, 1860); პოემა "კაკო ყაჩაღი" - "რამდენიმე სურათი ანუ ეპიზოდი ყაჩაღის ცხოვრებიდან" ([[1860]]) - მძაფრი პროტესტი ბატონყმობის წინააღმდეგ; ამავე პერიოდს განეკუთვნება როგორც ჭავჭავაძის პოეტური თარგმანები ([[შილერი, იოჰან |  შილერის]], [[ჰაინე, ჰაინრიხ | ჰაინეს]], [[რიუკერტი, ფრიდრიხ |   რიუკერტის]], [[ბაირონი, ჯორჯ |  ბაირონის]], [[სკოტი, უოლტერ |  სკოტის]], [[შენიე, ანდრე |  შენიეს]], [[პუშკინი, ალექსანდრე | პუშკინისა]] და [[ლერმონტოვი, მიხეილ | ლერმონტოვის]] ნაწარმოებისა) და სატრფიალო ლირიკის უდიდესი ნაწილი, ასევე პროგრესული სოციალურ და ეროვნულ იდეალებითა და მხატვრული სიახლეებით აღბეჭდილი საყოველთაოდ ცნობილი ლექსები "ხმა სამარიდან" ([[1857]]), "გუთნის-დედა", "ქართვლის დედა", "ჩემი თარიაღალი" (სამივე [[1858]]), "ნანა" ([[1859]]), "ქართველ სტუდენების სიმღერა", "მუშა", "იანიჩარი" (სამივე 1860); პატრიოტული ლირიკის ბრწყინვალე ნიმუშები - "ელეგია" (1859), "მესმის, მესმის" ([[1860]]), "გაზაფხული" ("ტყემ მოისხა ფოთოლი"..., [[1861]]); "პოეტი" (1860), რომელშიც ნათლად არის ჩამოყალიბებული ჭავჭავაძის შეხედულება პოეტის საზოგადოებრივი მისიის შესახებ. ამავე ხანებში იქმნება ჭავჭავაძის მხატვრული პროზის შესანიშნავი ნიმუშები, რომელთაც უდიდესი როლი ითამაშეს ქართული კრიტიკული რეალიზმის განვითარებაში: ბატონყმური ინსტიტუტის მანკიერებათა მამხილებელი მოთხრობა "გლახის ნაამბობი" (I-IV თავები, 1859) და ესკიზები მოთხრობისა "კაცია-ადამიანი?!", სადაც მებატონეთა გადაგვარებული და სასიკვდილოდ განწირული კლასის უაზრო და უშინაარსო, მცონარული ყოფის მაღალმხატვრული სატირული ასახვა საერთოდ ადამიანის, მისი ზნეობის, მისი ცხოვრების აზრის ზოგადკაცობრიულ პრობლემებზე დაგვაფიქრებს. ჭავჭავაძის პირველმა ლიტერატურულ-კრიტიკულმა წერილმა «ორიოდე სიტყვა თავად რევაზ შალვას ძის ერისთავის მიერ კაზლოვიდგან "შეშლილის" თარგმნაზედა»  ("ცისკარი", [[1861]]) ახალი თაობის ლიტერატურული მანიფესტის მნიშვნელობა შეიძინა. მასში, ისევე როგორც წერილებში "პასუხი" (1861) და "საქართველოს მოამბეზედ" (1863), ნათლად არის ჩამოყალიბებული რეალისტური მწერლობისა და სალიტერატურო კრიტიკის ძირითადი პრინციპები, ხელოვნებისა და ლიტერატურის არსისა და საზოგადოებრივი დანიშნულების, ობიექტური სინამდვილისადმი მხატვრული ლიტერატურის მიმართების მატერიალისტური გაგება, დასაბუთებული სალიტერატურო ენის განმარტივების, საერთო-სახ. ენასთან მისი დაახლოების აუცილებლობა. "ორიოდე სიტყვა"... იქცა [["მამებისა" და "შვილების" ბრძოლა | "მამებისა" და "შვილების" ბრძოლის]] საწყისად.
+სტუდენტობის 4 წელი უაღრესად მნიშვნელოვანი აღმოჩნდა ჭავჭავაძის როგორც პიროვნებისა და მოქალაქის, მოაზროვნისა და მწერლის ფორმირებისა და სრულყოფისათვის, მისი პროგრესული სოციალური-პროგრესული, ფილოსოფიური და ესთეტიკური მრწამსის შემუშავებისათვის. იგი იმთავითვე ინტენსიურად და საფუძვლიანად სწავლობდა [[საქართველო | საქართველოს]] ისტორიასა და ქართულ მწერლობას. რუსულ და ევროპელ მწერალთა და მეცნიერთა მემკვიდრეობას; გატაცებით დაეწაფა [[რუსები | რუსი]] რევოლუციონერ დემოკრატების - [[ბელინსკი, ბესარიონ | ბელინსკის]], [[გერცენი, ალექსანდრე | გერცენის]], [[დობროლიუბოვი, ნიკოლოზ | დობროლიუბოვის]], [[ჩერნიშევსკი, ნიკოლოზ | ჩერნიშევსკის]] ნააზრევს, რაც დაუკავშირა საკუთარი ხალხის პროგრესისათვის ბრძოლის მიზნებსა და ამოცანებს. 
 
-===ლიტერატურული და საზოგადოებრივი მოღვაწეობა=== 
+==შემოქმედება==
+ამ წლებში დაიწერა ჭავჭავაძის ძლიერი მხატვრული ინდივიდუალობით აღბეჭდილი და მძაფრი მოქალაქეობრივი პათოსით გამსჭვალული, ფართო საზოგადოებრივი რეზონანსის მქონე ნაწარმოებები, რომელთაც აღმავალი ეტაპი შექმნეს XIX საუკუნის ქართულ ლიტერატურასა და საერთოდ ქართული მხატვრული აზროვნების ისტორიაში: პოემა "აჩრდილი" (პირველი რედაქცია, 1859), რომელიც უმწვავეს ეროვნულ და სოციალურ პრობლემებზე წუხილის ნაყოფია და ნათელი მერმისის რწმენითაა განმსჭვალული; ეროვნულ-განმათავისუფლებელი იდეებით შთაგონებული დრამატული პოემა "ქართვლის დედა. ”სცენა მომავალ ცხოვრებიდან" (პირველი რედაქცია, 1860); პოემა "კაკო ყაჩაღი" - "რამდენიმე სურათი ანუ ეპიზოდი ყაჩაღის ცხოვრებიდან" ([[1860]]) - მძაფრი პროტესტი ბატონყმობის წინააღმდეგ; ამავე პერიოდს განეკუთვნება როგორც ჭავჭავაძის პოეტური თარგმანები ([[შილერი, იოჰან |  შილერის]], [[ჰაინე, ჰაინრიხ | ჰაინეს]], [[რიუკერტი, ფრიდრიხ | რიუკერტის]], [[ბაირონი, ჯორჯ |  ბაირონის]], [[სკოტი, უოლტერ |  სკოტის]], [[შენიე, ანდრე |  შენიეს]], [[პუშკინი, ალექსანდრე | პუშკინისა]] და [[ლერმონტოვი, მიხეილ | ლერმონტოვის]] ნაწარმოებისა) და სატრფიალო ლირიკის უდიდესი ნაწილი, ასევე პროგრესული სოციალურ და ეროვნულ იდეალებითა და მხატვრული სიახლეებით აღბეჭდილი საყოველთაოდ ცნობილი ლექსები "ხმა სამარიდან" ([[1857]]), "გუთნის-დედა", "ქართვლის დედა", "ჩემი თარიაღალი" (სამივე [[1858]]), "ნანა" ([[1859]]), "ქართველ სტუდენების სიმღერა", "მუშა", "იანიჩარი" (სამივე 1860); პატრიოტული ლირიკის ბრწყინვალე ნიმუშები - "ელეგია" (1859), "მესმის, მესმის" ([[1860]]), "გაზაფხული" ("ტყემ მოისხა ფოთოლი"..., [[1861]]); "პოეტი" (1860), რომელშიც ნათლად არის ჩამოყალიბებული ჭავჭავაძის შეხედულება პოეტის საზოგადოებრივი მისიის შესახებ. 
 
+ამავე ხანებში იქმნება ჭავჭავაძის მხატვრული პროზის შესანიშნავი ნიმუშები, რამაც უდიდესი როლი შეასრულა ქართული კრიტიკული რეალიზმის განვითარებაში: ბატონყმური ინსტიტუტის მანკიერებათა მამხილებელი მოთხრობა "გლახის ნაამბობი" (I-IV თავები, 1859) და ესკიზები მოთხრობისა "კაცია-ადამიანი?!", სადაც მებატონეთა გადაგვარებული და სასიკვდილოდ განწირული კლასის უაზრო და უშინაარსო, მცონარული ყოფის მაღალმხატვრული სატირული ასახვა საერთოდ ადამიანის, მისი ზნეობის, მისი ცხოვრების აზრის ზოგადკაცობრიულ პრობლემებზე დაგვაფიქრებს. ჭავჭავაძის პირველმა ლიტერატურულ-კრიტიკულმა წერილმა «ორიოდე სიტყვა თავად რევაზ შალვას ძის ერისთავის მიერ კაზლოვიდგან "შეშლილის" თარგმნაზედა»  ("ცისკარი", [[1861]]) ახალი თაობის ლიტერატურული მანიფესტის მნიშვნელობა შეიძინა. მასში, ისევე როგორც წერილებში "პასუხი" (1861) და "საქართველოს მოამბეზედ" (1863), ნათლად არის ჩამოყალიბებული რეალისტური მწერლობისა და სალიტერატურო კრიტიკის ძირითადი პრინციპები, ხელოვნებისა და ლიტერატურის არსისა და საზოგადოებრივი დანიშნულების, ობიექტური სინამდვილისადმი მხატვრული ლიტერატურის მიმართების მატერიალისტური გაგება, დასაბუთებული სალიტერატურო ენის განმარტივების, საერთო-სახ. ენასთან მისი დაახლოების აუცილებლობა. "ორიოდე სიტყვა"... იქცა [["მამებისა" და "შვილების" ბრძოლა | "მამებისა" და "შვილების" ბრძოლის]] საწყისად.
+
+===სამშობლოში მოღვაწეობა=== 
 ხანგრძლივი განშორების შემდეგ, [[1861]] წელს ილია ჭავჭავაძე რუსეთიდან საქართველოში დაბრუნდა. სამშობლოსთან შეხვედრის მოლოდინით აღძრული ფიქრები, მისი ჭირვარამის, მისი "დაუყუჩებელი ტკივილების" მწვავე განცდა და მზადყოფნა მისთვის ერთგულად მსახურების მხატვრულად აისახა "მგზავრის წერილებში", რომელიც არა მარტო ავტორის ან [["თერგდალეულები" | "თერგდალეულების"]] მიზნებსა და ამოცანებს, არამედ მთელი ქართველი ხალხის სასიცოცხლო მოთხოვნილებებს, საზოგადოდ ეროვნულ-განმათავისუფლებელი მოძრაობის უწმინდეს იდეალებს გამოხატავდა და მიზანდასახული აქტივობის, მოქმედებისა და ბრძოლის წყურვილითა და მოწოდებით იყო განმსჭვალული. ამ ხანებში ჭავჭავაძე გატაცებით აგროვებდა ქართული ხალხური ზეპირსიტყვიერების ნიმუშებს.
 
 [[1863]] ჭავჭავაძის მიერ დაარსებული ჟურნალი "საქართველოს მოამბე", მიუხედავად უმძიმესი საცენზური პირობებისა, ეროვნულ-განმათავისუფლებელი მოძრაობის ჭეშმარიტ მედროშედ იქცა.
@@ -40,7 +42,7 @@
 
 ილიამ სიცოცხლეშივე მოიპოვა მოწინავე ქართველი საზოგადოებრიობის საერთო აღიარება, უღრმესი პატივისცემა და დაფასება, ხოლო მისი მოწამებრივი სიკვდილის შემდეგ თანდათან სულ უფრო მკაფიოდ გამოიკვეთა ბუმბერაზი მოაზროვნისა და მხატვრის ნამოღვაწარის, მისი მდიდარი და მრავალფეროვანი შემოქმედების მაღალი ღირებულების, იმ დიდმნიშვნელოვანი მისიის ჭეშმარიტი აზრი, რომელიც მან ქართველი ხალხის სულიერ და გონებრივ აღორძინებაში შეასრულა.
 
-იგი განისვენებს [[თბილისი|თბილისში]], საზოგადო მოღვაწეთა მთაწმინდის პანთეონში. ქართული მართლმადიდებელი სამოციქულო ეკლესიის მიერ ილია ჭავჭავაძე წმინდანად არის შერაცხული.
+დაკრძალულია [[თბილისი|თბილისში]], საზოგადო მოღვაწეთა მთაწმინდის პანთეონში. ქართული მართლმადიდებელი სამოციქულო ეკლესიის მიერ ილია ჭავჭავაძე წმინდანად არის შერაცხული.
 
 [[კატეგორია:ქართველები]]
 [[კატეგორია:ქართველი მწერლები]]
