*Empty MediaWiki Message*

--- a/ვარძია.mw
+++ b/ვარძია.mw
@@ -9,7 +9,11 @@
 
 ვარძიის სამონასტრო ანსამბლი გამოკვეთილია ერუშეთის მთის კალთაზე ტუფბრექიჩიების შერეულ კლდეში (სიგრძე 500 მ-მდე), განლაგებულია ცამეტ სართულად. შედგება ისტორიულად ჩამოყალიბებული 2 ნაწილისაგან - ვარძიის მონასტრისა და უფრო ადრინდელი ხანის (X-XII საუკუნეები) კლდის სოფლის ანანურისაგან. ვარძიის გამოქვაბული კომპლექსის მშენებლობა რამდენიმე ეტაპად მიმდინარეობდა.
 
-I ეტაპზე, [[გიორგი III, საქართველოს მეფე|გიორგი III-ის]] მეფობის წლებში (1156-1184), შემუშავდა გეგმა და გამოიკვეთა პირველი სენაკები ეკლესიითურთ. II ეტაპზე (1184-1185) არსებული გეგმა ნაწილობრივ შეიცვალა. [[თამარი|თამარ]] მეფის მითითებით ჩატარდა მონასტრის ცენტრის რეკონსტრუქცია, კლდეში გამოკვეთეს ღვთიშმშობლის მიძინების დიდი დარბაზული ტაძარი სტოა-პორტიკით. ტაძარი მოხატა მხატვარმა გიორგიმ და მხატვართა ჯგუფმა ქართლის ერისთავის რატი სურამელის თაოსნობით და სახსრებით. III ეტაპზე (1185-1203) დამთავრდა სათავსებისა და მონაზონთა სენაკების, აგრეთვე თავდაცვით და საირიგაციო ნაგებობათა გამოკვეთა. IV ეტაპი დაკავშირებულია 1283 მიწისძვრასთან. 
+I ეტაპზე, [[გიორგი III, საქართველოს მეფე|გიორგი III-ის]] მეფობის წლებში (1156-1184), შემუშავდა გეგმა და გამოიკვეთა პირველი სენაკები ეკლესიითურთ. II ეტაპზე (1184-1185) არსებული გეგმა ნაწილობრივ შეიცვალა. [[თამარი|თამარ]] მეფის მითითებით ჩატარდა მონასტრის ცენტრის რეკონსტრუქცია, კლდეში გამოკვეთეს ღვთიშმშობლის მიძინების დიდი დარბაზული ტაძარი სტოა-პორტიკით. ტაძარი მოხატა მხატვარმა გიორგიმ და მხატვართა ჯგუფმა ქართლის ერისთავის რატი სურამელის თაოსნობით და სახსრებით. III ეტაპზე (1185-1203) დამთავრდა სათავსებისა და მონაზონთა სენაკების, აგრეთვე თავდაცვით და საირიგაციო ნაგებობათა გამოკვეთა. IV ეტაპი დაკავშირებულია 1283 მიწისძვრასთან. აქ ბექა ჯაყელი-ციხისჯვრელის ათაბაგობის ხანაში (1285-1306) ააგეს ორთაღიანი ნაგებობა სტოა-პორტიკის გასამაგრებლად და ორსართულიანი მოჩუქურთმებული სამრეკლო. მშენებლობის V ეტაპზე, ივანე ათაბაგის დროს, შეიქმნა დიდი სატრაპეზო. 
+
+ვარძიის ხუროთმოძღვრება დაფუძნებულია წინასწარ შემუშავებულ კომპოზიციურ იდეაზე - მრავალსართულად გამოკვეთილი ანსამბლი განლაგებულია კლდის უბის სიღრმეში ჩასმული ცენტრის - ტაძრის გარშემო. მთელი მონასტერი სამხრეთ მხარესაა მიმართული და საცხოვრებლები კლდის სიღრმეში სამხრეთიდან ჩრდილოეთითაა გამოკვეთილი. მონაზონთა საცხოვრებელი და საზოგადოებრიცი პალატები 2-3 და 4 ოთახისაგან შედგება და ერთმანეთთან დაკავშირებულია კარიბჭეებთან შექმნილი საგანგებო გასასვლელებით. მონასტერში 120 საცხოვრებელი კომპლექსის 420 სათავსოა, მ. შ. 25 მარანი 185 ქვევრით. საცხოვრებელი კომპლექსები შედგება ერთ ღერძზე განლაგებული კარიბჭის, საცხოვრებლისა და საკუჭნაოსაგან. კარიბჭე მთავარი არქიტექტურული ელემენტია, რომელიც ვარძიას მის წინამორბედ უდაბნო-მონასტრებისაგან განასხვავებს. კარიბჭის ფართო თაღი ერთადერთი და მტავარი არქიტექტურულ-ტექნიკური ელემენტია მონასტრის ფასადის გაფორმებაში, საცხოვრებელი თუ საზოგადო დანიშნულების სათავსები ტექნიკურად მაღალ დონეზეა შესწულებული. 
+
+ოთახების კედლებში გამოკვეთილია ფართო ნიშნები - საწოლად, ლოგინის დასალაგებლად , მცირე ნიშები - ჭურჭლისათვის, წიგნებისა და ჭრაქისათვის, მერხები, კერა და სხვა, ნიშები მეტწილად თაღოვანია და შემკულია მარტივი ჩაჭრილი საპირეებით.
 
 
 
