*Empty MediaWiki Message*

--- a/ოკეანე.mw
+++ b/ოკეანე.mw
@@ -1,4 +1,52 @@
-[[წყნარი ოკეანე]]
-[[ატლანტიკის ოკეანე]]
-[[ინდოეთის ოკეანე]]
-[[ჩრდილოეთ ყინულოვანი ოკეანე]]
+[[სურათი:Oceans.png|thumb|350px|მსოფლიო ოკეანეები]]
+'''ოკეანე''' (Okeanos, ბერძ. მდინარე; ძველმა ბერძნებმა შენიშნეს რომ ძლიერი დინება მოძრაობდა [[გიბრალტარის სრუტე|გიბრალტართან]] და ჩათვალეს, რომ ეს დიდი მდინარე იყო) ჰფარავს [[დედამიწა|დედამიწის]] ზედაპირის თითქმის სამ მეოთხედს (71%), და მსოფლიოს ოკეანური წყლების ნახევარზე მეტის სიღრმე 3000 მეტრს აღემატება.
+
+ეს გლობალური ერთმანეთთან დაკავშირებული მლაშე წყალი, რომელსაც ასევე მსოფლიო ოკეანეს უწოდებენ, იყოფა კონტინენტებითა და არქიპელაგებით შემდეგ ნაწილებად: [[წყნარი ოკეანე]], [[ატლანტიკის ოკეანე]], [[ინდოეთის ოკეანე]], [[ჩრდილოეთ ყინულოვანი ოკეანე]] და [[სამხრეთის ოკეანე]]
+
+ოკეანის მცირე რეგიონები იწოდება ზღვებად, ყურეებად, სრუტეებად და სხვ.
+
+{{გეოგრაფია}}
+[[კატეგორია:მსოფლიო წყლები]]
+
+[[an:Ozián]]
+[[bg:Световен океан]]
+[[zh-min-nan:Hái-iûⁿ]]
+[[bn:মহাসমুদ্র]]
+[[br:Meurvor]]
+[[ca:Oceà]]
+[[cs:Oceán]]
+[[da:Verdenshave]]
+[[de:Ozean]]
+[[et:Ookean]]
+[[es:Océano]]
+[[eo:Oceano]]
+[[eu:Ozeano]]
+[[fr:Océan]]
+[[gl:Océano]]
+[[ko:대양]]
+[[hr:Ocean]]
+[[io:Oceano]]
+[[id:Samudra]]
+[[it:Oceano (geografia)]]
+[[he:אוקיינוס]]
+[[la:Oceanus]]
+[[lt:Vandenynas]]
+[[ms:Lautan]]
+[[nl:Oceaan]]
+[[ja:大洋]]
+[[no:Hav]]
+[[nn:Hav]]
+[[pl:Ocean]]
+[[pt:Oceano]]
+[[ro:Ocean]]
+[[ru:Океан]]
+[[sh:Ocean]]
+[[simple:Ocean]]
+[[sk:Oceán]]
+[[sl:Ocean]]
+[[sr:Океан]]
+[[sv:Världshav]]
+[[tl:Karagatan]]
+[[th:มหาสมุทร]]
+[[uk:Океан]]
+[[zh:海洋]]
