--- a/ბერლინი.mw
+++ b/ბერლინი.mw
@@ -4,7 +4,7 @@
 !დროშა
 !გერბი
 |- style="background: #ffffff;" align="center"
-| style="width: 145px;" | [[სურათი:Flag_de-berlin_civil.png|140px|ბერლინის დროშა]]
+| style="width: 145px;" | [[სურათი:Flag of Berlin.svg|140px|ბერლინის დროშა]]
 | style="width: 145px;" | [[სურათი:Coat of arms Germany Berlin.png|center|60px|ბერლინის გერბი]]
 |- style="background: #ffffff;" align="center"
 | colspan="2" | <small>([[ბერლინის მიწის გერბები]])</small>
@@ -111,8 +111,8 @@
 <gallery>
 სურათი:Coat of arms Germany Berlin.png|ფედერაციული მიწის გერბი
 სურათი:Country symbol de-Berlin silver.png|ფედერაციული მიწის სიმბოლო
-სურათი:Flag de-berlin civil.png|ფედერაციული მიწის დროშა
-სურათი:Flag de-berlin service.png|ფედერაციული მიწის სამსახურეობრივი დროშა
+სურათი:Flag of Berlin.svg|ფედერაციული მიწის დროშა
+სურათი:Flag of Berlin (state).svg|ფედერაციული მიწის სამსახურეობრივი დროშა
 </gallery>
 
 ==რესურსები==
