--- a/ცნობილი_ქართველები:_ი.mw
+++ b/ცნობილი_ქართველები:_ი.mw
@@ -108,6 +108,7 @@
 * [[იოსელიანი, გიორგი]] - ქირურგი
 * [[იოსელიანი, გიორგი ნიკოლოზის ძე]] - საზოგადო მოღვაწე, პედგოგი
 * [[იოსელიანი, დავით]] - ქირურგი
+* [[იოსელიანი, დავით (გიორგის ძე)]] - ქირურგი, [[მედიცინის მეცნიერებათა დოქტორი]], [[პროფესორი]]
 * [[იოსელიანი, ეგნატე]] - რევოლუციონერ-ხალხოსანი
 * [[იოსელიანი, ელენე]] - რეჟისორი და პედაგოგი
 * [[იოსელიანი, იაროსლავ]] - საბჭოთა კავშირის გმირი
