*Empty MediaWiki Message*

--- a/დავით_იოსელიანი.mw
+++ b/დავით_იოსელიანი.mw
@@ -8,9 +8,9 @@
 
 დაიბადა 1894 წლის 17 აგვისტოს ქარელის რ-ის სოფ. ქვემო ხვედურეთში.
 
-         1912 წელს წარჩინებით დაამთავრა ქ.თბილისის ვაჟთა პირველი გიმნაზია.
+        1912 წელს წარჩინებით დაამთავრა ქ.თბილისის ვაჟთა პირველი გიმნაზია.
 
-         1917 წელს დაამთავრა ქ.პეტერბურგის სამხედრო სამედიცინო აკადემია.
+        1917 წელს დაამთავრა ქ.პეტერბურგის სამხედრო სამედიცინო აკადემია.
 
 1918 წელს დაინიშნა ორდინატორად ქ.თბილისის სამხედრო ჰოსპიტალში.
 
@@ -34,6 +34,7 @@
 
 შესრულებული აქვს 80-მდე სამეცნიერო ნაშრომი.
 
-         მინიჭებული აქვს საქართველოს მეცნიერების დამახურებული მოღვაწის საპატიო წოდება, დაჯილდოვებულია ლენინის და შრომის წითელი დროშის ორდენებით და აგრეთვე სხვა მედლებით.
+მინიჭებული აქვს საქართველოს მეცნიერების დამახურებული მოღვაწის საპატიო წოდება,
+დაჯილდოვებულია ლენინის და შრომის წითელი დროშის ორდენებით და აგრეთვე სხვა მედლებით.
 
 [http://www.medacademy.edu.ge/ioseliani.htm  link იოსელიანი დავითი]
