*Empty MediaWiki Message*

--- a/დავით_იოსელიანი.mw
+++ b/დავით_იოსელიანი.mw
@@ -2,39 +2,39 @@
 
 იოსელიანი დავითი გიორგის ძე
 
-აკადემიის რექტორი – 1940–1949 წლებში.
+[[აკადემიის რექტორი]] – [[1940]]–[[1949]] წლებში.
 
-მედიცინის მეცნიერებათა დოქტორი, პროფესორი.
+[[მედიცინის მეცნიერებათა დოქტორი]], [[პროფესორი]].
 
-დაიბადა 1894 წლის 17 აგვისტოს ქარელის რ-ის სოფ. ქვემო ხვედურეთში.
+დაიბადა [[1894]] წლის [[17 აგვისტოს]] [[ქარელი]]ს რ-ის სოფ. [[ქვემო ხვედურეთში]].
 
-        1912 წელს წარჩინებით დაამთავრა ქ.თბილისის ვაჟთა პირველი გიმნაზია.
+        [[1912]] წელს წარჩინებით დაამთავრა ქ.თბილისის ვაჟთა პირველი გიმნაზია.
 
-        1917 წელს დაამთავრა ქ.პეტერბურგის სამხედრო სამედიცინო აკადემია.
+        [[1917]] წელს დაამთავრა ქ.პეტერბურგის [[სამხედრო სამედიცინო აკადემია]].
 
-1918 წელს დაინიშნა ორდინატორად ქ.თბილისის სამხედრო ჰოსპიტალში.
+[[1918]] წელს დაინიშნა ორდინატორად ქ.თბილისის სამხედრო ჰოსპიტალში.
 
-1919 წელს დაიწყო მუშაობა ქ.თბილისის უნივერსიტეტის სამკურნალო ფაკულტეტის ოპერაციული ქირურგიისა და ტოპოგრაფიული ანატომიის კათედრაზე ასისტენტად.
+[[1919]] წელს დაიწყო მუშაობა ქ.თბილისის უნივერსიტეტის სამკურნალო ფაკულტეტის ოპერაციული ქირურგიისა და ტოპოგრაფიული ანატომიის კათედრაზე ასისტენტად.
 
-1928-1929 წლებში მივლინებულ იქნა ლენინგრადის სამხედრო აკადემიის ოპერაციული ქირურგიისა და ტოპოგრაფიული ანატომიის კათედრაზე.
+[[1928-1929]] წლებში მივლინებულ იქნა ლენინგრადის სამხედრო აკადემიის ოპერაციული ქირურგიისა და ტოპოგრაფიული ანატომიის კათედრაზე.
 
-1931 წელს აირჩიეს ქ.თბილისის სახელმწიფო სამედიცინო ინსტიტუტის ოპერაციული ქირურგიის დოცენტურის გამგედ.
+[[1931]] წელს აირჩიეს ქ.თბილისის სახელმწიფო სამედიცინო ინსტიტუტის ოპერაციული ქირურგიის დოცენტურის გამგედ.
 
-1934-1947 წლებში ხელმძღვანელობდა ქ.თბილისის სასწრაფო დახმარების საავადმყოფოს ქირურგიულ განყოფილებას, ხოლო 1941-1947 წლებში იყო ამ საავადმყოფოს დირექტორი.
+[[1934-1947]] წლებში ხელმძღვანელობდა ქ.თბილისის სასწრაფო დახმარების საავადმყოფოს ქირურგიულ განყოფილებას, ხოლო [[1941-1947]] წლებში იყო ამ საავადმყოფოს დირექტორი.
 
-1936 წელს დაიცვა სადოქტორო დისერტაცია.
+[[1936]] წელს დაიცვა [[სადოქტორო]] [[დისერტაცია]].
 
-1937 წელს აირჩიეს ქ.თბილისის სამედიცინო ინსტიტუტის ოპერაციული ქირურგიისა და ტოპოგრაფიული ანატომიის კათედრის გამგედ. ამავე წელს მიენიჭა პროფესორის წოდება.
+[[1937]] წელს აირჩიეს ქ.თბილისის სამედიცინო ინსტიტუტის ოპერაციული ქირურგიისა და ტოპოგრაფიული ანატომიის კათედრის გამგედ. ამავე წელს მიენიჭა პროფესორის წოდება.
 
-1934-1947 წლებში განაგებდა ექიმთა დახელოვნების თბილისის სახელმწიფო ინსტიტუტის ოპერაციული ქირურგიისა და ტოპოგრაფიული ანატომიის კათედრას.
+[[1934]]-[[1947]] წლებში განაგებდა ექიმთა დახელოვნების თბილისის სახელმწიფო ინსტიტუტის ოპერაციული ქირურგიისა და ტოპოგრაფიული ანატომიის კათედრას.
 
-1940 წლიდან არჩეულ იქნა ქ.თბილისის ექიმთა დახელოვნების ინსტიტუტის რექტორად.
+[[1940]] წლიდან არჩეულ იქნა ქ.თბილისის ექიმთა დახელოვნების ინსტიტუტის რექტორად.
 
-1947 წელს აირჩიეს თბილისის სამედიცინო ინსტიტუტის ზოგადი ქირურგიის კათედრის გამგედ.
+[[1947]] წელს აირჩიეს თბილისის სამედიცინო ინსტიტუტის ზოგადი ქირურგიის კათედრის გამგედ.
 
-შესრულებული აქვს 80-მდე სამეცნიერო ნაშრომი.
+შესრულებული აქვს 80-მდე [[სამეცნიერო ნაშრომი]].
 
 მინიჭებული აქვს საქართველოს მეცნიერების დამახურებული მოღვაწის საპატიო წოდება,
-დაჯილდოვებულია ლენინის და შრომის წითელი დროშის ორდენებით და აგრეთვე სხვა მედლებით.
+დაჯილდოვებულია [[ლენინი]]ს და შრომის წითელი დროშის ორდენებით და აგრეთვე სხვა მედლებით.
 
 [http://www.medacademy.edu.ge/ioseliani.htm  link იოსელიანი დავითი]
