*Empty MediaWiki Message*

--- a/დავით_იოსელიანი.mw
+++ b/დავით_იოსელიანი.mw
@@ -38,3 +38,4 @@
 დაჯილდოვებულია [[ლენინი]]ს და შრომის წითელი დროშის ორდენებით და აგრეთვე სხვა მედლებით.
 
 [http://www.medacademy.edu.ge/ioseliani.htm  link იოსელიანი დავითი]
+--[[მომხმარებელი:Giviko|Giviko]] 15:24, 5 აპრილი 2006 (UTC)
