*Empty MediaWiki Message*

--- a/დავით_იოსელიანი.mw
+++ b/დავით_იოსელიანი.mw
@@ -16,11 +16,11 @@
 
 [[1919]] წელს დაიწყო მუშაობა ქ.თბილისის უნივერსიტეტის სამკურნალო ფაკულტეტის ოპერაციული ქირურგიისა და ტოპოგრაფიული ანატომიის კათედრაზე ასისტენტად.
 
-[[1928-1929]] წლებში მივლინებულ იქნა ლენინგრადის სამხედრო აკადემიის ოპერაციული ქირურგიისა და ტოპოგრაფიული ანატომიის კათედრაზე.
+[[1928]]-[[1929]] წლებში მივლინებულ იქნა ლენინგრადის სამხედრო აკადემიის ოპერაციული ქირურგიისა და ტოპოგრაფიული ანატომიის კათედრაზე.
 
 [[1931]] წელს აირჩიეს ქ.თბილისის სახელმწიფო სამედიცინო ინსტიტუტის ოპერაციული ქირურგიის დოცენტურის გამგედ.
 
-[[1934-1947]] წლებში ხელმძღვანელობდა ქ.თბილისის სასწრაფო დახმარების საავადმყოფოს ქირურგიულ განყოფილებას, ხოლო [[1941-1947]] წლებში იყო ამ საავადმყოფოს დირექტორი.
+[[1934]]-[[1947]] წლებში ხელმძღვანელობდა ქ.თბილისის სასწრაფო დახმარების საავადმყოფოს ქირურგიულ განყოფილებას, ხოლო [[1941]]-[[1947]] წლებში იყო ამ საავადმყოფოს დირექტორი.
 
 [[1936]] წელს დაიცვა [[სადოქტორო]] [[დისერტაცია]].
 
