--- a/დავით_იოსელიანი.mw
+++ b/დავით_იოსელიანი.mw
@@ -11,6 +11,6 @@
 შესრულებული აქვს 80-მდე სამეცნიერო ნაშრომი. მინიჭებული აქვს საქართველოს მეცნიერების დამახურებული მოღვაწის საპატიო წოდება, დაჯილდოვებულია ლენინის და შრომის წითელი დროშის ორდენებით და აგრეთვე სხვა მედლებით.
 
 ==რესურსები ინტერნეტში==
-*[http://www.medacademy.edu.ge/ioseliani.htm  link დავით იოსელიანის ბიოგრაფია]
+*[http://www.medacademy.edu.ge/ioseliani.htm  დავით იოსელიანის ბიოგრაფია]
 
 [[კატეგორია:ქართველი მეცნიერები]]
