*Empty MediaWiki Message*

--- a/დავით_იოსელიანი.mw
+++ b/დავით_იოსელიანი.mw
@@ -6,7 +6,7 @@
 
 1928-1929 წლებში მივლინებულ იქნა ლენინგრადის სამხედრო აკადემიის ოპერაციული ქირურგიისა და ტოპოგრაფიული ანატომიის კათედრაზე. 1931 წელს აირჩიეს ქ.თბილისის სახელმწიფო სამედიცინო ინსტიტუტის ოპერაციული ქირურგიის დოცენტურის გამგედ. 1934-1947 წლებში ხელმძღვანელობდა ქ.თბილისის სასწრაფო დახმარების საავადმყოფოს ქირურგიულ განყოფილებას, ხოლო 1941-1947 წლებში იყო ამ საავადმყოფოს დირექტორი. 1936 წელს დაიცვა სადოქტორო დისერტაცია.
 
-1937 წელს აირჩიეს ქ.თბილისის სამედიცინო ინსტიტუტის ოპერაციული ქირურგიისა და ტოპოგრაფიული ანატომიის კათედრის გამგედ. ამავე წელს მიენიჭა პროფესორის წოდება. 1934-1947 წლებში განაგებდა ექიმთა დახელოვნების თბილისის სახელმწიფო ინსტიტუტის ოპერაციული ქირურგიისა და ტოპოგრაფიული ანატომიის კათედრას. 1940 წლიდან არჩეულ იქნა ქ.თბილისის ექიმთა დახელოვნების ინსტიტუტის რექტორად. 1947 წელს აირჩიეს თბილისის სამედიცინო ინსტიტუტის ზოგადი ქირურგიის კათედრის გამგედ.
+1937 წელს აირჩიეს [[თსსუ|თბილისის სამედიცინო ინსტიტუტის]] ოპერაციული ქირურგიისა და ტოპოგრაფიული ანატომიის კათედრის გამგედ. ამავე წელს მიენიჭა პროფესორის წოდება. 1934-1947 წლებში განაგებდა ექიმთა დახელოვნების თბილისის სახელმწიფო ინსტიტუტის ოპერაციული ქირურგიისა და ტოპოგრაფიული ანატომიის კათედრას. 1940 წლიდან არჩეულ იქნა ქ.თბილისის ექიმთა დახელოვნების ინსტიტუტის რექტორად. 1947 წელს აირჩიეს თბილისის სამედიცინო ინსტიტუტის ზოგადი ქირურგიის კათედრის გამგედ.
 
 შესრულებული აქვს 80-მდე სამეცნიერო ნაშრომი. მინიჭებული აქვს საქართველოს მეცნიერების დამახურებული მოღვაწის საპატიო წოდება, დაჯილდოვებულია ლენინის და შრომის წითელი დროშის ორდენებით და აგრეთვე სხვა მედლებით.
 
