--- a/ჯანდაცვა.mw
+++ b/ჯანდაცვა.mw
@@ -9,6 +9,7 @@
 
 ===იხილეთ აგრეთვე===
 
+*[[საქართველოს სახელმწიფო სამედიცინო დაწესებულებები]]
 *[[ჯანმრთელობის დაცვის მსოფლიო ორგანიზაცია]]
 *[[მედიცინა]]
 
