*Empty MediaWiki Message*

--- a/დავით_იოსელიანი.mw
+++ b/დავით_იოსელიანი.mw
@@ -1,8 +1,6 @@
 [[სურათი:ioseliani.jpg|thumb|დავით იოსელიანი]]
+'''დავით გიორგის ძე იოსელიანი''' (*[[17 აგვისტო]], [[1894]] - ????) მედიცინის მეცნიერებათა დოქტორი, პროფესორი. აკადემიის რექტორი – 1940–1949 წლებში. 
 
-'''დავით გიორგის ძე იოსელიანი''' მედიცინის მეცნიერებათა დოქტორი, პროფესორი.
-
-აკადემიის რექტორი – 1940–1949 წლებში, 
 დაიბადა 1894 წლის 17 აგვისტოს ქარელის რ-ის სოფ. ქვემო ხვედურეთში. 1912 წელს წარჩინებით დაამთავრა ქ.თბილისის ვაჟთა პირველი გიმნაზია. 1917 წელს დაამთავრა ქ.პეტერბურგის სამხედრო სამედიცინო აკადემია. 1918 წელს დაინიშნა ორდინატორად ქ.თბილისის სამხედრო ჰოსპიტალში. 1919 წელს დაიწყო მუშაობა ქ.თბილისის უნივერსიტეტის სამკურნალო ფაკულტეტის ოპერაციული ქირურგიისა და ტოპოგრაფიული ანატომიის კათედრაზე ასისტენტად.
 
 1928-1929 წლებში მივლინებულ იქნა ლენინგრადის სამხედრო აკადემიის ოპერაციული ქირურგიისა და ტოპოგრაფიული ანატომიის კათედრაზე. 1931 წელს აირჩიეს ქ.თბილისის სახელმწიფო სამედიცინო ინსტიტუტის ოპერაციული ქირურგიის დოცენტურის გამგედ. 1934-1947 წლებში ხელმძღვანელობდა ქ.თბილისის სასწრაფო დახმარების საავადმყოფოს ქირურგიულ განყოფილებას, ხოლო 1941-1947 წლებში იყო ამ საავადმყოფოს დირექტორი. 1936 წელს დაიცვა სადოქტორო დისერტაცია.
