*Empty MediaWiki Message*

--- a/საქართველოს_სახელმწიფო_სამედიცინო_აკადემია.mw
+++ b/საქართველოს_სახელმწიფო_სამედიცინო_აკადემია.mw
@@ -1,5 +1,4 @@
-[[სურათი:Example.jpg]]
-
+[[სურათი:shenoba_bolo.jpg|thumb|380px|საქართველოს სახელმწიფო სამედიცინო აკადემია]]
 საქართველოს სახელმწიფო სამედიცინო აკადემია დაარსდა 1935 წელს ექიმთა კვალიფიკაციის ამაღლების ინსტიტუტის სახით ხოლო 1941 წელს მას ეწოდა “თბილისის ექიმთა დახელოვნების ინსტიტუტი”.
 
 საბჭოთა კავშირის მინისტრთა საბჭოს 1965 წლის 8 დეკემბრის და საქართველოს სსრ მინისტრთა საბჭოს 1966 წლის 25 იანვრის დადგენილებებით თბილისის ექიმთა დახელოვნების ინსტიტუტი გადავიდა საკავშირო ჯანდაცვის სამინისტროს უშუალო დაქვემდებარებაში, სტატუსით გათანაბრებული იყო უმაღლეს სასწავლო დაწესებულებასთან და იწოდებოდა “სსრ კავშირის ჯანდაცვის სამინისტროს ექიმთა დახელოვნების თბილისის სახელმწიფო ინსტიტუტი”.
