/* ჰიტლერის «შტაბის დაცვა» და «შემტევი რაზმი» */

--- a/შუცშტაფელი.mw
+++ b/შუცშტაფელი.mw
@@ -3,9 +3,10 @@
 
 ==«სს»-ის წინამორბედი ორგანიზაციები==
 ===ჰიტლერის «შტაბის დაცვა» და «შემტევი რაზმი»===
+[[image:Stoßtrupp Adolf Hitler.jpg|thumb|200px|«შტოსტრუპი "ადოლფ ჰიტლერი"» 1923 წელს]]
 [[1923]] წლის მაისში [[ჰიტლერი, ადოლფ|ადოლფ ჰიტლერმა]] «[[სა]]»-ს წევრებისაგან ჩამოაყალიბა ახალი ორგანიზაცია «შტაბსვახე» ([[გერმ.]]: Stabswache; [[ქართული ენა|ქართ.]]: შტაბის დაცვა), რომელმაც სულ მცირე ხნის განმავლობაში იარსება. [[ერჰარტი, ჰერმან|ჰერმან ერჰარტმა]], მას შემდეგ რაც [[1923]] წლის ივლისში ჰიტლერისა და [[რიომი, ერნსტ|რიომის]] მიმდევარი გახდა, ჩამოაყალიბა 12 კაციანი «შტოსტრუპი ადოლფ ჰიტლერი» ([[გერმ.]]: Stoßtrupp Adolf Hitler; [[ქართული ენა|ქართ.]]: შემტევი რაზმი ადოლფ ჰიტლერი), რომელსაც უნდა დაეცვა პირადად ადოლფ ჰიტლერი შიდაპარტიული განხეთქილებების დროს.
 
-«შტოსტრუპის» სემადგენლობაში 2 ყოფილი »შტაბსვახელიც» იყო: [[შრეკი, იულიუს|იულიუს შრეკი]] და იოზეფ ბერხტოლდი. ამათ გარდა «შტოსტრუპის» წევრები გახდნენ: ულრიხ გრაფი, [[მორისი, ემილ|ემილ მორისი]], კრისტიან ვებერი, [[დიტრიხი, იოზეფ|ზეპ დიტრიხი]], [[ჰესი, რუდოფ|რუდოლფ ჰესი]], იაკობ გრიმინგერი, [[ბუხი, ვალტერ|ვალტერ ბუხი]] და [[ფილერი, კარლ|კარლ ფილერი]].
+«შტოსტრუპის» შემადგენლობაში 2 ყოფილი »შტაბსვახელიც» იყო: [[შრეკი, იულიუს|იულიუს შრეკი]] და იოზეფ ბერხტოლდი. ამათ გარდა «შტოსტრუპის» წევრები გახდნენ: ულრიხ გრაფი, [[მორისი, ემილ|ემილ მორისი]], კრისტიან ვებერი, [[დიტრიხი, იოზეფ|ზეპ დიტრიხი]], [[ჰესი, რუდოფ|რუდოლფ ჰესი]], იაკობ გრიმინგერი, [[ბუხი, ვალტერ|ვალტერ ბუხი]] და [[ფილერი, კარლ|კარლ ფილერი]].
 
 ==«სს»-ის ისტორია==
 ===დაარსება===
