*Empty MediaWiki Message*

--- a/ალექსანდრე_წულუკიძე_(ექიმი).mw
+++ b/ალექსანდრე_წულუკიძე_(ექიმი).mw
@@ -1,4 +1,4 @@
-[[სურათი:Example.jpg]]
+[[სურათი:culukidze.jpg|thumb|წულუკიძე ალექსანდრე]]
 
 წულუკიძე ალექსანდრე პეტრეს ძე მედიცინის მეცნიერებათა დოქტორი, პროფესორი.
 
