--- a/დავით_იოსელიანი.mw
+++ b/დავით_იოსელიანი.mw
@@ -1,15 +1,19 @@
 [[სურათი:ioseliani.jpg|thumb|დავით იოსელიანი]]
-'''დავით გიორგის ძე იოსელიანი''' (*[[17 აგვისტო]], [[1894]] - ????) მედიცინის მეცნიერებათა დოქტორი, პროფესორი. აკადემიის რექტორი – 1940–1949 წლებში. 
+'''დავით გიორგის ძე იოსელიანი''' (*[[17 აგვისტო]]/ [[30 აგვისტო]], [[1894]], სოფ. ქვემო ხვედურეთი, ახლანდელი [[ქარელის რაიონი]]  ―   †  [[25 თებერვალი]], [[1968]], [[თბილისი]]), ქართველი ქირურგი, მედიცინის მეცნიერებათა დოქტორი (1937), პროფესორი (1937), საქართველოს სსრ მეცნიერებათა დამსახურებული მოღვაწე (1942), სკკპ წევრი 1940-იდან. აკადემიის რექტორი – 1940–1949 წლებში. 
 
-დაიბადა 1894 წლის 17 აგვისტოს ქარელის რ-ის სოფ. ქვემო ხვედურეთში. 1912 წელს წარჩინებით დაამთავრა ქ.თბილისის ვაჟთა პირველი გიმნაზია. 1917 წელს დაამთავრა ქ.პეტერბურგის სამხედრო სამედიცინო აკადემია. 1918 წელს დაინიშნა ორდინატორად ქ.თბილისის სამხედრო ჰოსპიტალში. 1919 წელს დაიწყო მუშაობა ქ.თბილისის უნივერსიტეტის სამკურნალო ფაკულტეტის ოპერაციული ქირურგიისა და ტოპოგრაფიული ანატომიის კათედრაზე ასისტენტად.
+==ბიოგრაფია==
+დაიბადა 1894 წლის 17 აგვისტოს ქარელის რ-ის სოფ. ქვემო ხვედურეთში. 1912 წელს წარჩინებით დაამთავრა ქ.თბილისის ვაჟთა პირველი გიმნაზია. 1917 წელს დაამთავრა ქ. პეტროგრადის სამხედრო-სამედიცინო აკადემია. 1918 წელს დაინიშნა ორდინატორად ქ.თბილისის სამხედრო ჰოსპიტალში. 1919 წელს დაიწყო მუშაობა ქ.თბილისის უნივერსიტეტის სამკურნალო ფაკულტეტის ოპერაციული ქირურგიისა და ტოპოგრაფიული ანატომიის კათედრაზე ასისტენტად.
 
 1928-1929 წლებში მივლინებულ იქნა ლენინგრადის სამხედრო აკადემიის ოპერაციული ქირურგიისა და ტოპოგრაფიული ანატომიის კათედრაზე. 1931 წელს აირჩიეს ქ.თბილისის სახელმწიფო სამედიცინო ინსტიტუტის ოპერაციული ქირურგიის დოცენტურის გამგედ. 1934-1947 წლებში ხელმძღვანელობდა ქ.თბილისის სასწრაფო დახმარების საავადმყოფოს ქირურგიულ განყოფილებას, ხოლო 1941-1947 წლებში იყო ამ საავადმყოფოს დირექტორი. 1936 წელს დაიცვა სადოქტორო დისერტაცია.
 
 1937 წელს აირჩიეს [[თსსუ|თბილისის სამედიცინო ინსტიტუტის]] ოპერაციული ქირურგიისა და ტოპოგრაფიული ანატომიის კათედრის გამგედ. ამავე წელს მიენიჭა პროფესორის წოდება. 1934-1947 წლებში განაგებდა ექიმთა დახელოვნების თბილისის სახელმწიფო ინსტიტუტის ოპერაციული ქირურგიისა და ტოპოგრაფიული ანატომიის კათედრას. 1940 წლიდან არჩეულ იქნა ქ.თბილისის ექიმთა დახელოვნების ინსტიტუტის რექტორად. 1947 წელს აირჩიეს თბილისის სამედიცინო ინსტიტუტის ზოგადი ქირურგიის კათედრის გამგედ.
 
-შესრულებული აქვს 80-მდე სამეცნიერო ნაშრომი. მინიჭებული აქვს საქართველოს მეცნიერების დამახურებული მოღვაწის საპატიო წოდება, დაჯილდოვებულია ლენინის და შრომის წითელი დროშის ორდენებით და აგრეთვე სხვა მედლებით.
+შესრულებული აქვს 80-მდე სამეცნიერო ნაშრომი. მინიჭებული აქვს საქართველოს მეცნიერების დამახურებული მოღვაწის საპატიო წოდება, დაჯილდოვებულია [[ლენინის ორდენი|ლენინის]] და [[შრომის წითელი დროშის ორდენები|შრომის წითელი დროშის ორდენებით]] და აგრეთვე სხვა მედლებით.
 
 ==რესურსები ინტერნეტში==
 *[http://www.medacademy.edu.ge/ioseliani.htm  დავით იოსელიანის ბიოგრაფია]
 
 [[კატეგორია:ქართველი მეცნიერები]]
+[[კატეგორია:ქართველები]] 
+[[კატეგორია:დაბადებული 1894]]  
+[[კატეგორია:გარდაცვლილი 1968]]
