*Empty MediaWiki Message*

--- a/დავით_იოსელიანი.mw
+++ b/დავით_იოსელიანი.mw
@@ -8,7 +8,7 @@
 
 1937 წელს აირჩიეს [[თსსუ|თბილისის სამედიცინო ინსტიტუტის]] ოპერაციული ქირურგიისა და ტოპოგრაფიული ანატომიის კათედრის გამგედ. ამავე წელს მიენიჭა პროფესორის წოდება. 1934-1947 წლებში განაგებდა ექიმთა დახელოვნების თბილისის სახელმწიფო ინსტიტუტის ოპერაციული ქირურგიისა და ტოპოგრაფიული ანატომიის კათედრას. 1940 წლიდან არჩეულ იქნა ქ.თბილისის ექიმთა დახელოვნების ინსტიტუტის რექტორად. 1947 წელს აირჩიეს თბილისის სამედიცინო ინსტიტუტის ზოგადი ქირურგიის კათედრის გამგედ.
 
-შესრულებული აქვს 80-მდე სამეცნიერო ნაშრომი. მინიჭებული აქვს საქართველოს მეცნიერების დამახურებული მოღვაწის საპატიო წოდება, დაჯილდოვებულია [[ლენინის ორდენი|ლენინის]] და [[შრომის წითელი დროშის ორდენები|შრომის წითელი დროშის ორდენებით]] და აგრეთვე სხვა მედლებით.
+შესრულებული აქვს 80-მდე სამეცნიერო ნაშრომი. მინიჭებული აქვს საქართველოს მეცნიერების დამახურებული მოღვაწის საპატიო წოდება, დაჯილდოვებულია [[ლენინის ორდენი|ლენინის]] და [[შრომის წითელი დროშის ორდენი|შრომის წითელი დროშის ორდენებით]] და აგრეთვე სხვა მედლებით.
 
 ==რესურსები ინტერნეტში==
 *[http://www.medacademy.edu.ge/ioseliani.htm  დავით იოსელიანის ბიოგრაფია]
