--- a/შუცშტაფელი.mw
+++ b/შუცშტაფელი.mw
@@ -1,3 +1,4 @@
+[[Image:De hfss.gif|thumb|200px|"სს"-ის სიმბოლო, ძველგერმანული [[რუნები]].]]
 «'''დამცავი რაზმი'''» – «'''სს'''» ([[გერმ.]]: Schutzstaffel - SS) [[1934]]-[[1945]] წლებში იყო დამოუკიდებელი, პარამილიტარისტული ორგანიზიაცია [[ნსდაპ|ნაცისტური]] პარტიის შემადგენლობაში, რომლის შემადგენელი ნაწილები (ორგანიზაციები) მთავარი დამნაშავენი იყვნენ [[ჰოლოკოსტი|ჰოლოკოსტში]]. «სს»-ის დევიზი იყო „ჩვენი ღირსებას ერთგულება ჰქვია“ ([[გერმ.]]: „Unsere Ehre heißt Treue“).
 
 
