/* «სს» - დამოუკიდებელი ორგანიზაცია */

--- a/შუცშტაფელი.mw
+++ b/შუცშტაფელი.mw
@@ -28,6 +28,7 @@
 
 
 ===«სს» - დამოუკიდებელი ორგანიზაცია===
+[[სურათი:Himmler.jpg|thumb|200px|"სს"-ის რაიხსფიურერი ჰაინრიხ ჰიმლერი]]
 «სს»-ს, სანამ «სა»-ს შემადგენლობაში იყო, «[[ნსდაპ]]»-ის შიგასაპოლიციო პუნქცია ეკისრებოდა. მას შემდეგ რაც [[1929]] ჰაინრიხ ჰიმლერი რაიხსფიურერი გახდა დაიწყო ორგანიზაციის ძირეული გარდაქმნა, რომელიც ამიერიდან «ნსდაპ»-ის საბრძოლო რაზმი უნდა ყოფილიყო: „ნაციონალ-სოციალისტური, სამხედრო ორდენი ნორდიული ნიშნების მატარებელ კაცთა, რომელთაგანაც თითოეული უპირობოდ დაემორჩილებოდა  ფიურერის ყოველ ბრძანებას“ ([[გერმ.]]: „ein nationalsozialistischer, soldatischer Orden nordisch bestimmter Männer, von denen jeder bedingungslos jeden Befehl befolgt, der vom Führer kommt“).
 
 «სს» ნელ-ნელა ელიტარულ და მასობრივ ორგანიზაციად გადაიქცა, რომლიც რიგებშიც [[1932]] წელს 52.000, ხოლო ერთი წლის შემდეგ უკვე 204.000 წევრი ირიცხებოდა. ორგანიზაციის ელიტარული ხასიათი გამოსჭვივოდა იმ რასობრივ-ბიოლოგიურ და მსოფლხედველობრივ კრიტერიუმებში, რომლბიც კანდიდატებს უნდა შეესრულებინათ «სს»-ში მოსახვედრად. «სს», როგორც „კლანური ერთობა“, ნაციონალ-სოციალისტური გაბატონებული რასის იდეოლოგიის განსახიერება და როგორც »სისხლის სიწმინდის შემნახველი“ მსოფლიოში ნორდიული რასის დომინირების ჩანასახი უნდა ყოფილიყო. 
@@ -59,7 +60,6 @@
 * [[ზიპო (სს)|უშიშროების პოლიცია]], შემოკლ.: «ზიპო» ([[გერმ.]]: Sicherheitspolizei - Sipo) - იგი მეთვალყურეობდა კრიმინალურ ([[კრიპო]]) და საიდუმლო ([[გერსატპო]]) პოლიციას.
 * «[[ვაფენ-სს]]» ([[გერმ.]]: Waffen-SS) - ეს ორგანიზაცია შეადგენდა «სს»-ის შეიარაღებულ ძალებს, რომლებიც თავის მხრივ შედგებოდნენ «მკვდარი თავის ქალას შენაერთებისაგან» და «სს-ის სარეზერვო ძალებისაგან».
 * [[ვფჰა|მეურნეობისა და მმართვის მთავარი სამმართველო]], შემოკლ.: «ვფჰა» ([[გერმ.]]: Wirtschafts- und Verwaltungshauptamt - WVHA) - იგი მართავდა «სს»-ის საკუთრებაში მყოფი ინდუსტრიულ, სამომსახურეო და სასოფლო სამეურნეო საწარმოებს, საკონცენტრაციო ბანაკებს და განაგებდა მათ კონსტრუირებას.
-
 
 ===გერმანული საწარმოები===
 «სს»-ის მიერ უამრავი ფირმა იქნა დაარსებული. მათ შორის - შპს „[[გერმანული მიწისა და ქვის ქარხანა]]“ ([[1938]]). ეს ფირმები [[1940]] წელს „გერმანულ სამეურნეო საწარმოებში“ გაერთიანდნენ, რომელიც «სს»-ის ელიტისაგან იმართებოდა. [[1942]] წელს ყველა ეკონომიკურ-ფინანსური საქმე  [[ვფჰა|მეურნეობისა და მმართვის მთავარი სამმართველოს]] დაქვემდებარებაში გადავიდა. მას მიეკუთვნებოდნენ აგრეთვე საკონცენტრაციო ბანაკები და აქედან გამომდინარე «სს»-ის ფირმებში ათიათასობით სამხედრო ტყვე და პატიმარი იძულებით მუშაობდა.
