*Empty MediaWiki Message*

--- a/დავით_მამამთავრიშვილი.mw
+++ b/დავით_მამამთავრიშვილი.mw
@@ -1,26 +1,26 @@
 [[სურათი:mamamtavrishvili.jpg|thumb|მამათავრიშვილი ალექსანდრე]] [[მედიცინის მეცნიერებათა დოქტორი]], [[პროფესორი]].
 
-აკადემიის რექტორი – 1953–1954 წლებში.
+აკადემიის რექტორი – [[1953]]–[[1954]] წლებში.
 
-დაიბადა 1907 წელს ქ.თბილისში.
+დაიბადა [[1907]] წელს ქ.თბილისში.
 
-1929 წელს დაამთავრა ქ.თბილისის სახელმწიფო უნივერსიტეტის სამედიცინო ფაკულტეტი და მუშაობა დაიწყო ასისტენტად პათოლოგიური ანატომიის კათედრაზე.
+[[1929]] წელს დაამთავრა ქ.თბილისის სახელმწიფო უნივერსიტეტის სამედიცინო ფაკულტეტი და მუშაობა დაიწყო ასისტენტად პათოლოგიური ანატომიის კათედრაზე.
 
-1932 წლიდან მუშაობდა აკადემიკოს გრ.მუხაძის კლინიკაში.
+[[1932]] წლიდან მუშაობდა აკადემიკოს გრ.მუხაძის კლინიკაში.
 
-1941 წელს დაიცვა სადოქტორო დისერტაცია და არჩეულ იქნა თბილისის სამედიცინო ინსტიტუტის ქირურგიის კათედრის პროფესორად.
+[[1941]] წელს დაიცვა სადოქტორო დისერტაცია და არჩეულ იქნა თბილისის სამედიცინო ინსტიტუტის ქირურგიის კათედრის პროფესორად.
 
-1941-1945 წლებში მუშაობდა ამიერკავკასიის ფრონტის მთავარ ქირურგად, ხოლო ომის დამთავრების შემდეგ 1950 წლამდე მუშაობდა ამიერკავკასიის სამხედრო ოლქის მთავარ ქირურგად.
+[[1941]]-[[1945]] წლებში მუშაობდა ამიერკავკასიის ფრონტის მთავარ ქირურგად, ხოლო ომის დამთავრების შემდეგ [[1950]] წლამდე მუშაობდა ამიერკავკასიის სამხედრო ოლქის მთავარ ქირურგად.
 
-1950 წელს დაინიშნა ქ.თბილისის სახელმწიფო სამედიცინო ინსტიტუტის პრორექტორად.
+[[1950]] წელს დაინიშნა ქ.თბილისის სახელმწიფო სამედიცინო ინსტიტუტის პრორექტორად.
 
-1951 წლიდან ხელმძღვანელობდა თბილისის ექიმთა დახელოვნების ინსტიტუტის ქირურგიის კათედრას.
+[[1951]] წლიდან ხელმძღვანელობდა თბილისის ექიმთა დახელოვნების ინსტიტუტის ქირურგიის კათედრას.
 
-1953 წელს აირჩიეს თბილისის ექიმთა დახელოვნების ინსტიტუტის დირექტორად.
+[[1953]] წელს აირჩიეს თბილისის ექიმთა დახელოვნების ინსტიტუტის დირექტორად.
 
-1954-1959 წლებში იყო საქართველოს სსრ ჯანდაცვის მინისტრი.
+[[1954]]-[[1959]] წლებში იყო საქართველოს სსრ ჯანდაცვის მინისტრი.
 
-შესრულებული აქვს 240 სამეცნიერო ნაშრომი, მათგან 20 მონოგრაფია.
+შესრულებული აქვს 240 [[სამეცნიერო ნაშრომი]], მათგან 20 [[მონოგრაფია]].
 
    დაჯილდოვებულია ოქტომბრის რევოლუციის, წითელი ვარსკვლავის და საპატიო ნიშნის ორდენებით და აგრეთვე სხვა მედლებით.
 
