*Empty MediaWiki Message*

--- a/სიმონ_ხეჩინაშვილი.mw
+++ b/სიმონ_ხეჩინაშვილი.mw
@@ -5,6 +5,23 @@
 ==ბიოგრაფია==
 
 [[1941]] წელს დაამთავრა [[თბილისის სამედიცინო ინსტიტუტი]]. 1942-1946 წლებში მუშაობდა თბილისის სამედიცინო ინსტიტუტის ოტორინოლარინგოლოგიურ კლინიკაში, 1947-1954 - საქართველოს მეცნიერებათა აკადემიის ფიზიოლოგიის ინსტიტუტში [[ბერიტაშვილი, ივანე|ი. ბერიტაშვილთან]].
+1941 წელს დაამთავრა ქ.თბილისის სახელმწიფო სამედიცინო ინსტიტუტის სამკურნალო ფაკულტეტი. 
+
+1941–1942 წლებში მუშაობდა ქ.თბილისის # 1 ტუბ-დისპანსერის ორდინატორად.
+
+1942–1946 წლებში მუშაობდა საქართველოს რესპუბლიკის ჯანდაცვის სამინისტროს ცენტრალური კლინიკური საავადმყოფოს ორდინატორად.
+
+1946–1951 წლებში მუშაობდა ქ.თბილისის ექიმთა დახელოვნების ინსტიტუტის ყელ-ყურ-ცხვირის კლინიკის ასისტენტად.
+
+1951–1952 წლებში ქ.თბილისის ექიმთა დახელოვნების ინსტიტუტის ყელ-ყურ-ცხვირის კლინიკის დოცენტი.
+
+1952–1979 წლებში მუშაობდა ქ.თბილისის ექიმთა დახელოვნების ინსტიტუტის ოტორინოლარინგოლოგიის კათედრის გამგის მოადგილედ.
+
+1979 წლიდან არჩეულ იქნა ქ.თბილისის ექიმთა დახელოვნების ინსტიტუტის რექტორად.
+
+შესრულებული აქვს 180 სამეცნიერო ნაშრომი, აქედან 4 მონოგრაფია.
+
+1964 წელს მიენიჭა ლენინური პრემია, 1966 წელს ლენინის ორდენი, 1971 წელს წითელი დროშის მშრომელთა ორდენი, 1969 წელს საქართველოს მეცნიერების დამსახურებული მოღვაწის მედალი, 1979 წელს ოქტომბრის რევოლუციის ორდენი.
 
 
 
