--- a/ალექსანდრე_წულუკიძე_(ექიმი).mw
+++ b/ალექსანდრე_წულუკიძე_(ექიმი).mw
@@ -1,4 +1,4 @@
-[[სურათი:culukidze.jpg|thumb|წულუკიძე ალექსანდრე]]
+[[სურათი:Culukidze1.jpg|thumb|ალექსანდრე წულუკიძე]]
 
 წულუკიძე ალექსანდრე პეტრეს ძე მედიცინის მეცნიერებათა დოქტორი, პროფესორი.
 
