--- a/ჯინჯერ_როჯერსი.mw
+++ b/ჯინჯერ_როჯერსი.mw
@@ -2,6 +2,14 @@
 '''ჯინჯერ როჯერსი''' (Ginger Rogers) ([[16 ივლისი]], [[1911]] – [[25 აპრილი]], [[1995]]) იყო ლეგენდარული ამერიკელი მსახიობი და მოცეკვავე. ყველაზე ცნობილია, როგორც [[ასტერი, ფრედ|ფრედ ასტერის]] რომანტიული ინტერესი და ცეკვის პარტნიორი ათ ცეკვა-სიმღერის ჰოლივუდურ მიუზიკლთა სერიაში, თუმცა მისი სამსახიობო კარიერა ოცდაათ წელზე მეტს გრძელდებოდა.
 
 ==ადრეული ბიოგრაფია==
+ჯინჯერ როჯერსის დაბადების სახელი იყო ''ვირჯინია კეთრინ მაკმეთი'', დაიბადა ინდიპენდენსში, [[მისური]], ედინს მაკმეთისა (შოტლანდიური ჩამომავლობის) და ლელ ოუენს მაკმეთის (უელსელი) ოჯახში. მშობლები ადრევე გიყარნენ და ჯინჯერი დიდის მშობლებთან იზრდებოდა [[კანზას-სიტი|კანზას-სიტისთან]].
+
+მშობლებს ჯინჯერის მზრუნველობაზე სასამართლოში ჰქონდათ სარჩელი შეტანილი და საქმე იქამდეც მივიდა, რომ მამამისმა ჯინჯერი დედის დაუკითხავად სახლიდან მოიტაცა. ოფიციალური განქორწინების შემდეგ ჯინჯერი დედის მშობლებთან დარჩა, სანამ დედამისი ორი წლის განმავლობაში [[ჰოლივუდი|ჰოლივუდში]] სცენარებზე მუშაობდა. ბავშვობაში ჯინჯერის დეიდაშვილებს მისი სახელის ”ვირჯინია” გამოთქმა უჭირდათ და ამიტომ მას შემოკლებით ”ჯინჯა”-ს უძახდნენ.
+
+როცა ჯინჯერი 9 წლის იყო დედამისი ცოლად ჯონ ლოგან როჯერსს გაჰყვა. ჯინჯერმა მამინაცვლის გვარი აიღო, თუმცა ეს ლეგალურად არასდროს გაუფორმებია. ამ პერიოდიდან ისინი ფორტ-უორზში, [[ტეხასი]], ცხოვრობდნენ, სადაც დედამისი თეატრალური კრიტიკოსი ხდება ადგილობრივი გაზეთისთვის ”ფორტ-უორზ რეკორდი”.
+
+ყმაწვილობაში ჯინჯერი სკოლაში მასწავლებლობაზე ოცნებობდა, თუმცა დედამისის ინტერესმა ჰოლივუდისა და თეატრისადმი ახალგაზრდა ჯინჯერს გადაწყვეტილება შეაცვლევინა. მაჯესტიკ თეატრის სცენის უკან დედის მომლოდინე ჯინჯერ მალე სიმღერასა და ცეკვას იწყებს სცენაზე შემსრულებლბის ყურებით.
+
 ==ვოდევილი==
 ==კინოკარიერა==
 ==წლები ფრედ ასტერთან==
