*Empty MediaWiki Message*

--- a/დავით_მამამთავრიშვილი.mw
+++ b/დავით_მამამთავრიშვილი.mw
@@ -1,4 +1,4 @@
-[[სურათი:mamamtavrishvili.jpg|thumb|მამათავრიშვილი ალექსანდრე]] [[მედიცინის მეცნიერებათა დოქტორი]], [[პროფესორი]].
+[[სურათი:mamamtavrishvili1.jpg|thumb|მამათავრიშვილი ალექსანდრე]] [[მედიცინის მეცნიერებათა დოქტორი]], [[პროფესორი]].
 
 აკადემიის რექტორი – [[1953]]–[[1954]] წლებში.
 
